--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://workshop-sample.fcjuni.com/"
+baseURL = "https://kphuong08.github.io/Report/"
 relativeURLs = false
 canonifyURLs = false
 defaultContentLanguage = "en"
